fix table header sort icons wrapping, show loading spinner for customer details, fix links to customer details to include branch

--- a/KeithLink/KeithLink.Web.Presentation/angular-app/app/styles/components/_forms.scss
+++ b/KeithLink/KeithLink.Web.Presentation/angular-app/app/styles/components/_forms.scss
@@ -8,3 +8,7 @@ form.style-validation-errors {
     
   }
 }
+
+.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
+  background-color: rgb(235, 235, 228);
+}
